--- a/styles/general.css
+++ b/styles/general.css
@@ -24,13 +24,6 @@
 button {
   width: 100%;
 }
-body {
-  background-color: #f0f4f8;
-  margin: 0;
-  display: flex;
-  height: 100vh;
-  overflow: hidden;
-}
 
 .container {
   padding-right: 15px;
@@ -46,6 +39,15 @@ body {
 nav {
   width: 100%;
   height: 100px;
+}
+
+body {
+  background-color: #f0f4f8;
+  margin: 0;
+  display: flex;
+  height: 100vh;
+  overflow: hidden;
+  flex-direction: column;
 }
 
 .main {
